--- a/build.gradle
+++ b/build.gradle
@@ -50,11 +50,15 @@ ext {
 		fiber4j            : "1.1.0",
 		jackson            : "2.9.8",
 		javaCommons        : "2.3.6",
+		javassist          : "3.23.1-GA",
 		jetty              : "9.4.14.v20181114",
 		junit              : "4.12",
+		log4j              : "2.8.2",
+		netty              : "4.1.25.Final",
+		nettyConnectionPool: "1.2.1",
+		nettyTcNative      : "2.0.12.Final",
 		scala              : "2.12.6",
 		slf4j              : "1.7.25",
-		log4j              : "2.8.2",
 		prometheus         : "0.6.0",
 	]
 	log4j2PluginsDatPath = Paths.get(
@@ -182,7 +186,19 @@ dependencies {
 		"org.eclipse.jetty:jetty-server:${depVersion.jetty}",
 		"org.eclipse.jetty:jetty-servlet:${depVersion.jetty}",
 		"org.eclipse.jetty:jetty-rewrite:${depVersion.jetty}",
-		// actually the deps below are the runtime deps
+		"io.netty:netty-buffer:${depVersion.netty}",
+		"io.netty:netty-common:${depVersion.netty}",
+		"io.netty:netty-handler:${depVersion.netty}",
+		"io.netty:netty-transport:${depVersion.netty}",
+		// the deps below are the runtime deps actually
+		"io.netty:netty-codec:${depVersion.netty}",
+		"io.netty:netty-codec-http:${depVersion.netty}",
+		"io.netty:netty-resolver:${depVersion.netty}",
+		"io.netty:netty-transport-native-epoll:${depVersion.netty}:linux-x86_64",
+		"io.netty:netty-transport-native-kqueue:${depVersion.netty}:osx-x86_64",
+		"io.netty:netty-transport-native-unix-common:${depVersion.netty}",
+		"io.netty:netty-tcnative-boringssl-static:${depVersion.nettyTcNative}",
+		"org.javassist:javassist:${depVersion.javassist}",
 		"org.apache.logging.log4j:log4j-jul:${depVersion.log4j}",
 		"org.apache.logging.log4j:log4j-slf4j-impl:${depVersion.log4j}",
 		"org.slf4j:slf4j-api:${depVersion.slf4j}",
