--- a/ci/kuberenetes/standalone.yaml
+++ b/ci/kuberenetes/standalone.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: mongoose
 spec:
   containers:
-    - image: emcmongoose/mongoose
+    - image: emcmongoose/mongoose-base
       name: mongoose
       args:
         - --load-step-limit-time=1m
