--- a/ci/kuberenetes/distributed.yaml
+++ b/ci/kuberenetes/distributed.yaml
@@ -1,10 +1,10 @@
+# Service for nodes RMI-communication 
 apiVersion: v1
 kind: Service
-
 metadata:
-  name: mongoose-node
+  name: mongoose-svc
   labels:
-    app: mongoose-node
+    app: mongoose-svc
   namespace: mongoose
 
 spec:
@@ -17,6 +17,7 @@ spec:
   selector:
     name: mongoose-node
 ---
+# 4 additional Mongoose nodes
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -49,13 +50,14 @@ spec:
               topologyKey:    "kubernetes.io/hostname"
 
       containers:
-        - image: emcmongoose/mongoose
+        - image: emcmongoose/mongoose-base
           name: mongoose-node
           args: ["--run-node"]
 
           ports:
             - containerPort: 1099
 ---
+# Mongoose Entry node
 apiVersion: v1
 kind: Pod
 metadata:
@@ -63,10 +65,10 @@ metadata:
   namespace: mongoose
 spec:
   containers:
-    - image: emcmongoose/mongoose
+    - image: emcmongoose/mongoose-base
       name: mongoose
       args:
         - --load-step-limit-time=1m
           --storage-driver-type=dummy-mock
-          --load-step-node-addrs=mongoose-node-0.mongoose-node,mongoose-node-1.mongoose-node,mongoose-node-2.mongoose-node,mongoose-node-3.mongoose-node
+          --load-step-node-addrs=mongoose-node-0.mongoose-svc,mongoose-node-1.mongoose-svc,mongoose-node-2.mongoose-svc,mongoose-node-3.mongoose-svc
   restartPolicy: OnFailure
