--- a/ci/kuberenetes/additional-node.yaml
+++ b/ci/kuberenetes/additional-node.yaml
@@ -1,30 +1,49 @@
+# Service for mongoose nodes RMI-communication 
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongoose-node
+  name: mongoose-svc
   labels:
-    app: mongoose-node
-  namespace: mongoose
+    app: mongoose
 spec:
-  type: LoadBalancer
   ports:
-  - name: http
-    port: 9999
-    targetPort: 9999
+    - name: data
+      port: 1099
+      targetPort: 1099
+    - name: http
+      port: 9999
+      targetPort: 9999
   selector:
     name: mongoose-node
 ---
+# Service to communicate with Mongoose entry node via REST API
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongoose-entry-node-svc
+spec:
+  type: LoadBalancer
+  ports:
+    - name: data
+      port: 1099
+      targetPort: 1099
+    - name: http
+      port: 9999
+      targetPort: 9999
+  selector:
+    statefulset.kubernetes.io/pod-name: mongoose-node-0
+---
+# 4 additional Mongoose nodes
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mongoose-node
-  namespace: mongoose
 spec:
   replicas: 4
   selector:
     matchLabels:
       name: mongoose-node
-  serviceName: mongoose-node
+  serviceName: mongoose-svc
   podManagementPolicy: Parallel
   template:
     metadata:
@@ -36,13 +55,30 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
-                  - key:      "app"
+                  - key:      "name"
                     operator: In
-                    values:   ["mongoose-node"]
+                    values:
+                    - "mongoose-node"
+                    - "mongoose-svc"
               topologyKey:    "kubernetes.io/hostname"
       containers:
-        - image: emcmongoose/mongoose
-          name: mongoose-node
-          args: ["--run-node"]
-          ports:
-            - containerPort: 9999
+      - image: "emcmongoose/mongoose-base"
+        imagePullPolicy: Always
+        name: mongoose-node
+
+        args: {{- printf " [" -}}
+          {{- printf "\"--run-node\"" -}}
+          {{ if (ne $.Values.args "") and (ne $.Values.args nil) }}
+            {{- printf "," }}
+            {{- .Values.args -}}
+          {{ end }}
+          {{- printf "]" }}
+
+        ports:
+        - containerPort: 1099
+        - containerPort: 9999
+        {{ if .Values.debug }}
+        - containerPort: 5005
+        command: ["/opt/mongoose/entrypoint_debug.sh"]
+        {{- end }}
+
