--- a/ci/docker/docker-compose.yaml
+++ b/ci/docker/docker-compose.yaml
@@ -2,39 +2,28 @@ version: '2'
 
 services:
 
-  mongoose1:
-    image: emcmongoose/mongoose:4.2.13
-    container_name: mongoose1
+  mongoose-node:
+    image: $IMAGE_NAME:$IMAGE_TAG
     command: ["--run-node"]
-  mongoose2:
-    image: emcmongoose/mongoose:4.2.13
-    container_name: mongoose2
-    command: ["--run-node"]
-  mongoose3:
-    image: emcmongoose/mongoose:4.2.13
-    container_name: mongoose3
-    command: ["--run-node"]
+    ports:
+      - "1090-1098:1099"
+      - "9990-9998:9999"
 
   mongoose:
-    image: emcmongoose/mongoose:4.2.13
+    image: $IMAGE_NAME:$IMAGE_TAG
     container_name: mongoose
+    ports:
+      - "1099:1099"
+      - "9999:9999"
     volumes:
-      - "mongoose:/opt/volume/"
-    command: ["--storage-auth-uid=user1",
-              "--storage-auth-secret=secretKey1",
-              "--storage-net-node-addrs=10.199.196.20",
-              "--load-step-node-addrs=mongoose1,mongoose2,mongoose3",
-              "--run-scenario=/opt/volume/max.s3.4.nvme.10KB.js",
-              "--item-output-path=bucket1"]
+      - "${MONGOOSE_SCENARIO_PATH}:/opt/volume/scenario.js"
+    command: ["--storage-auth-uid=${STORAGE_AUTH_UID}",
+              "--storage-auth-secret=${STORAGE_AUTH_SECRET}",
+              "--storage-net-node-addrs=${STORAGE_NET_NODE_ADDRS}",
+              "--load-step-node-addrs=${LOAD_STEP_NODE_ADDRS}",
+              "--run-scenario=/opt/volume/scenario.js",
+              "--item-output-path=${ITEM_OUTPUT_PATH}"]
     links:
-      - mongoose1
-      - mongoose2
-      - mongoose3
+      - mongoose-node
     depends_on:
-      - mongoose1
-      - mongoose2
-      - mongoose3
-
-volumes:
-  mongoose:
-    external: true
+      - mongoose-node
