--- a/ci/docker/.env
+++ b/ci/docker/.env
@@ -1,8 +1,9 @@
 IMAGE_NAME=emcmongoose/mongoose
-IMAGE_TAG=latest
+IMAGE_TAG=4.2.11
 MONGOOSE_SCENARIO_PATH=./scenario.js
-STORAGE_NET_NODE_ADDRS=127.0.0.1
+STORAGE_NET_NODE_ADDRS=localhost
+STORAGE_NET_NODE_PORT=9000
 ITEM_OUTPUT_PATH=bucket1
 STORAGE_AUTH_UID=user1
 STORAGE_AUTH_SECRET=secret1
-LOAD_STEP_NODE_ADDRS=docker_mongoose-node_1
+LOAD_STEP_NODE_ADDRS=mongoose-node
