--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
 
 repositories {
 	maven { url "https://maven.google.com" }
-	jcenter { url "http://jcenter.bintray.com/"}
+	jcenter { url "https://jcenter.bintray.com/"}
 	mavenCentral()
 }
 
