[BASE-1401] remote exception in docker (#31)
* change base images for docker

* Changelog + version

* Try to use other repositories

* Try to use https

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ plugins {
 }
 
 repositories {
-	jcenter()
+	maven { url "https://maven.google.com" }
+	jcenter { url "https://jcenter.bintray.com/"}
 	mavenCentral()
 }
 
