--- a/ci/docker/.env
+++ b/ci/docker/.env
@@ -1,9 +1,9 @@
-IMAGE_NAME=emcmongoose/mongoose
-IMAGE_TAG=4.2.11
-MONGOOSE_SCENARIO_PATH=./scenario.js
-STORAGE_NET_NODE_ADDRS=localhost
+IMAGE_NAME=harbor.lss.emc.com/common-images/mongoose
+IMAGE_TAG=4.1.1
+MONGOOSE_SCENARIO_PATH=/c/tmp/scenario.js
+STORAGE_NET_NODE_ADDRS=host.docker.internal
 STORAGE_NET_NODE_PORT=9000
-ITEM_OUTPUT_PATH=bucket1
+ITEM_OUTPUT_PATH=/bucket1
 STORAGE_AUTH_UID=user1
-STORAGE_AUTH_SECRET=secret1
+STORAGE_AUTH_SECRET=secretKey1
 LOAD_STEP_NODE_ADDRS=mongoose-node
