--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -86,7 +86,7 @@ build_docker_image:
     MONGOOSE_IMAGE_VERSION: ${CI_COMMIT_SHA}
     PYTHONPATH: ${PYTHONPATH}:/usr/lib/python2.7/site-packages:src/test/robot/lib
   before_script:
-    - apk add --no-cache --update python py-pip
+    - apk add --no-cache --update python3 py-pip
     - pip install -U virtualenv
     - pip install -U requests
     - pip install -U robotframework
