--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -84,9 +84,9 @@ build_docker_image:
   variables:
     HOST_WORKING_DIR: ${CI_PROJECT_DIR}
     MONGOOSE_IMAGE_VERSION: ${CI_COMMIT_SHA}
-    PYTHONPATH: ${PYTHONPATH}:/usr/lib/python2.7/site-packages:src/test/robot/lib
+    PYTHONPATH: ${PYTHONPATH}:/usr/lib/python3.8/site-packages:src/test/robot/lib
   before_script:
-    - apk add --no-cache --update python py-pip
+    - apk add --no-cache --update python3 py-pip
     - pip install -U virtualenv
     - pip install -U requests
     - pip install -U robotframework
