--- a/ci/docker/docker-compose-nodes.yaml
+++ b/ci/docker/docker-compose-nodes.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   mongoose-node:
-    image: emcmongoose/mongoose-base:4.2.16
+    image: ${IMAGE:-emcmongoose/mongoose-base}:${TAG:-4.2.16}
     command: ["--run-node"]
     container_name: mongoose-node
     hostname: mongoose-node
@@ -11,6 +11,6 @@ services:
       - "1099:1099"
       - "9999:9999"
     deploy:
-      replicas: 1
+      replicas: ${REPLICAS:-1}
       placement:
         max_replicas_per_node: 1
