add 5005 port to debug

--- a/ci/docker/.env
+++ b/ci/docker/.env
@@ -1,5 +1,5 @@
-IMAGE_NAME=harbor.lss.emc.com/common-images/mongoose
-IMAGE_TAG=4.1.1
+IMAGE_NAME=emcmongoose/mongoose-base
+IMAGE_TAG=latest
 MONGOOSE_SCENARIO_PATH=/c/tmp/scenario.js
 STORAGE_NET_NODE_ADDRS=host.docker.internal
 STORAGE_NET_NODE_PORT=9000
