--- a/ci/docker/docker-compose.yaml
+++ b/ci/docker/docker-compose.yaml
@@ -1,11 +1,10 @@
-version: '2'
+version: '3'
 
 services:
 
   mongoose-node:
     image: $IMAGE_NAME:$IMAGE_TAG
     command: ["--run-node"]
-    container_name: mongoose-node
     hostname: mongoose-node
     ports:
       - "1090-1098:1099"
@@ -17,21 +16,13 @@ services:
     ports:
       - "1099:1099"
       - "9999:9999"
+      - "5005:5005"
     volumes:
       - "${MONGOOSE_SCENARIO_PATH}:/opt/volume/scenario.js"
-    command: ["--storage-auth-uid=${STORAGE_AUTH_UID}",
+    command: ["--run-scenario=/opt/volume/scenario.js",
+              "--storage-auth-uid=${STORAGE_AUTH_UID}",
               "--storage-auth-secret=${STORAGE_AUTH_SECRET}",
               "--storage-net-node-addrs=${STORAGE_NET_NODE_ADDRS}",
               "--storage-net-node-port=${STORAGE_NET_NODE_PORT}",
-              "--load-step-node-addrs=${LOAD_STEP_NODE_ADDRS}",
-#              "--load-op-recycle=true",
-              "--item-data-size=100KB-1MB",
-              "--storage-driver-limit-concurrency=10",
-              "--load-op-limit-count=10000",
-              "--run-scenario=/opt/volume/scenario.js"
-#              "--item-input-path=${ITEM_OUTPUT_PATH}"
+              "--load-step-node-addrs=${LOAD_STEP_NODE_ADDRS}"
     ]
-#    links:
-#      - mongoose-node
-#    depends_on:
-#      - mongoose-node
