--- a/ci/docker/.env
+++ b/ci/docker/.env
@@ -1,9 +1,11 @@
 IMAGE_NAME=emcmongoose/mongoose-base
 IMAGE_TAG=latest
-MONGOOSE_SCENARIO_PATH=/c/tmp/scenario.js
+MONGOOSE_SCENARIO_PATH=/path/to/scenario.js
+COMPOSE_PROJECT_NAME=mongoose
+LOAD_STEP_NODE_ADDRS=$COMPOSE_PROJECT_NAME_mongoose-node_1
+
 STORAGE_NET_NODE_ADDRS=host.docker.internal
 STORAGE_NET_NODE_PORT=9000
 ITEM_OUTPUT_PATH=/bucket1
 STORAGE_AUTH_UID=user1
 STORAGE_AUTH_SECRET=secretKey1
-LOAD_STEP_NODE_ADDRS=root_mongoose-node_1
