--- a/ci/docker/docker-compose.yaml
+++ b/ci/docker/docker-compose.yaml
@@ -5,7 +5,6 @@ services:
   mongoose-node:
     image: ${IMAGE:-emcmongoose/mongoose-base}:${TAG:-latest}
     command: ["--run-node"]
-    hostname: mongoose-node
     ports:
       - "1090-1098:1099"
       - "9990-9998:9999"
@@ -19,11 +18,11 @@ services:
       - "5005:5005"
     volumes:
       - "${MONGOOSE_SCENARIO_PATH}:/opt/volume/scenario.js"
-    command: ["--run-scenario=/opt/volume/scenario.js",
-              "--storage-auth-uid=${STORAGE_AUTH_UID}",
-              "--storage-auth-secret=${STORAGE_AUTH_SECRET}",
-              "--storage-net-node-addrs=${STORAGE_NET_NODE_ADDRS}",
-              "--storage-net-node-port=${STORAGE_NET_NODE_PORT}",
+    command: [#"--run-scenario=/opt/volume/scenario.js",
+#              "--storage-auth-uid=${STORAGE_AUTH_UID}",
+#              "--storage-auth-secret=${STORAGE_AUTH_SECRET}",
+#              "--storage-net-node-addrs=${STORAGE_NET_NODE_ADDRS}",
+#              "--storage-net-node-port=${STORAGE_NET_NODE_PORT}",
               "--load-step-node-addrs=${LOAD_STEP_NODE_ADDRS}"
     ]
     depends_on:
