--- a/ci/docker/.env
+++ b/ci/docker/.env
@@ -2,7 +2,7 @@ IMAGE_NAME=emcmongoose/mongoose-base
 IMAGE_TAG=latest
 MONGOOSE_SCENARIO_PATH=/path/to/scenario.js
 COMPOSE_PROJECT_NAME=mongoose
-LOAD_STEP_NODE_ADDRS=$COMPOSE_PROJECT_NAME_mongoose-node_1
+LOAD_STEP_NODE_ADDRS=mongoose_mongoose-node_1
 
 STORAGE_NET_NODE_ADDRS=host.docker.internal
 STORAGE_NET_NODE_PORT=9000
