--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
 	id "scala"
 	id "signing"
 	id "maven-publish"
-	id "com.bmuschko.docker-remote-api" version "4.0.5"
+	id "com.bmuschko.docker-remote-api" version "6.4.0"
 	id "com.diffplug.gradle.spotless" version "3.18.0"
 	id "io.codearte.nexus-staging" version "0.20.0"
 	id "de.marcphilipp.nexus-publish" version "0.2.0"
@@ -140,7 +140,7 @@ ext {
 }
 
 wrapper {
-	gradleVersion = "4.10.3"
+	gradleVersion = "6.4.0"
 }
 
 configurations {
@@ -488,11 +488,8 @@ import com.bmuschko.gradle.docker.tasks.container.*
 task dockerBuildImage(type: DockerBuildImage) {
 	inputDir = project.projectDir
 	dockerFile = project.file("ci${File.separator}docker${File.separator}Dockerfile")
-	imageId = "emcmongoose/${project.name}".toString()
-	tags = [
-		"emcmongoose/${project.name}:${version}",
-		"emcmongoose/${project.name}:testing",
-	]
+	images.add("emcmongoose/${project.name}:${version}")
+	images.add("emcmongoose/${project.name}:testing")
 }
 
 task dockerPushProductionImage(type: DockerPushImage, dependsOn: dockerBuildImage) {
