--- a/build.gradle
+++ b/build.gradle
@@ -493,13 +493,11 @@ task dockerBuildImage(type: DockerBuildImage) {
 }
 
 task dockerPushProductionImage(type: DockerPushImage, dependsOn: dockerBuildImage) {
-	imageName = "emcmongoose/${project.name}".toString()
-	tag = "emcmongoose/${project.name}:${version}".toString()
+	images.add("emcmongoose/${project.name}:${version}")
 }
 
 task dockerPushTestingImage(type: DockerPushImage, dependsOn: dockerBuildImage) {
-	imageName = "emcmongoose/${project.name}".toString()
-	tag = "emcmongoose/${project.name}:testing".toString()
+	images.add("emcmongoose/${project.name}:testing")
 }
 
 // Robot Framework /////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -507,17 +505,14 @@ task dockerPushTestingImage(type: DockerPushImage, dependsOn: dockerBuildImage) 
 task dockerBuildImageRobotest(type: DockerBuildImage) {
 	inputDir = project.projectDir
 	dockerFile = project.file("ci${File.separator}docker${File.separator}Dockerfile.robotest")
-	imageId = "emcmongoose/${project.name}-robotest".toString()
-	tags = [
-		"emcmongoose/${project.name}-robotest:${version}",
-	]
+	images.add("emcmongoose/${project.name}-robotest:${version}")
 }
 
 task dockerCreateContainerRobotest(type: DockerCreateContainer, dependsOn: [dockerBuildImage, dockerBuildImageRobotest]) {
 	attachStderr = true
 	attachStdout = true
-	autoRemove = true
-	binds = [
+	hostConfig.autoRemove = true
+	hostConfig.binds = [
 		"${project.buildDir}": "/root/mongoose/build",
 		"/var/run/docker.sock": "/var/run/docker.sock",
 	]
@@ -530,7 +525,7 @@ task dockerCreateContainerRobotest(type: DockerCreateContainer, dependsOn: [dock
 		"TEST": System.getenv("TEST"),
 	]
 	imageId = dockerBuildImageRobotest.getImageId()
-	network = "host"
+	hostConfig.network = "host"
 	tty = true
 	doLast {
 		println "Created the container for the ${System.env.SUITE}.${System.env.TEST} test"
@@ -543,7 +538,7 @@ task dockerStartContainerRobotest(type: DockerStartContainer, dependsOn: dockerC
 
 task robotest(type: DockerWaitContainer, dependsOn: dockerStartContainerRobotest) {
 	targetContainerId dockerCreateContainerRobotest.getContainerId()
-	timeout = 600 // 10 min w/o output -> fail on Travis CI
+	awaitStatusTimeout = 600 // 10 min w/o output -> fail on Travis CI
 	doLast {
 		if(0 != exitCode) {
 			throw new GradleException("Some robotests FAILED")
