--- a/build.gradle
+++ b/build.gradle
@@ -437,6 +437,10 @@ def execute(cmd, dir = null) {
 	stdOut.toString()
 }
 
+task doNothing() {
+
+}
+
 task listAllModulesDeps(dependsOn: jar) {
 	doLast {
 		def modulesDepsFile = new File(modulesDepsFilePath)
