--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -86,11 +86,10 @@ build_docker_image:
     MONGOOSE_IMAGE_VERSION: ${CI_COMMIT_SHA}
     PYTHONPATH: ${PYTHONPATH}:/usr/lib/python3.8/site-packages:src/test/robot/lib
   before_script:
-    # since 20.0.26 version virtualenv uses distlib 3.0.1 instead of 3.0.0. If apk --update is done first then
-    # issue rises with 3.0.0 not being able to upgrade to 3.0.1
-    - apk add --no-cache py-pip python3
-    - pip install virtualenv
+    # since 20.0.26 version virtualenv uses distlib 0.3.1 instead of 0.3.0. If apk --update is done first then
+    # issue rises with 3.0.0 not being able to upgrade to 3.0.1. So we ignore 0.3.0
     - apk add --no-cache --update python3 py-pip
+    - pip install virtualenv --ignore-installed distlib
     - pip install -U requests
     - pip install -U robotframework
     - pip install -U robotframework-requests
