--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -87,7 +87,7 @@ build_docker_image:
     PYTHONPATH: ${PYTHONPATH}:/usr/lib/python3.8/site-packages:src/test/robot/lib
   before_script:
     - apk add --no-cache --update python3 py-pip
-    - pip install -U virtualenv
+    - pip install -U virtualenv --ignore-installed distlib
     - pip install -U requests
     - pip install -U robotframework
     - pip install -U robotframework-requests
