--- a/ci/.gitlab-ci.yml
+++ b/ci/.gitlab-ci.yml
@@ -58,19 +58,19 @@ build:
     paths:
       - build/libs/mongoose-*.jar
 
-#test_unit:
-#  stage: test
-#  script:
-#    - ./gradlew test
-#
-#test_integration:
-#  stage: test
-#  script:
-#    - ./gradlew integrationTest
-#  artifacts:
-#    paths:
-#      - build/reports/tests/integrationTest/*
-#    when: on_failure
+test_unit:
+  stage: test
+  script:
+    - ./gradlew test
+
+test_integration:
+  stage: test
+  script:
+    - ./gradlew integrationTest
+  artifacts:
+    paths:
+      - build/reports/tests/integrationTest/*
+    when: on_failure
 
 build_docker_image:
   stage: build_docker_image
