Add MetricsTotalCsvLogMessage to output step results into csv file
Change HashMap to LinkedHashMap for quantile values to keep inputted order
Change log4g2 static metrics.total.csv header to a dynamic one to account for passed quantiles
Erase quantile data from MetricsCsvLogMessage as results during the test do not have any quantile data anymore

--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -81,7 +81,7 @@ Configuration:
         StepIdTriggeringPolicy: {}
       DirectWriteRolloverStrategy: {}
       PatternLayout:
-        header: "DateTimeISO8601,OpType,Concurrency,NodeCount,ConcurrencyCurr,ConcurrencyMean,CountSucc,CountFail,Size,StepDuration[s],DurationSum[s],TPAvg[op/s],TPLast[op/s],BWAvg[MB/s],BWLast[MB/s],DurationAvg[us],DurationMin[us],DurationLoQ[us],DurationMed[us],DurationHiQ[us],DurationMax[us],LatencyAvg[us],LatencyMin[us],LatencyLoQ[us],LatencyMed[us],LatencyHiQ[us],LatencyMax[us]\n"
+        #header: is removed as it's dynamically generated based on the passed quantiles
         pattern: "%m%n"
     - name: metricsThresholdFileTotal
       fileName: "${ctx:home_dir}${sys:file.separator}log${sys:file.separator}${ctx:step_id}${sys:file.separator}metrics.threshold.total.csv"
