Add parameter to configure metrics aggregation wait period
Fix output for timing metrics in recycle mode

--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -64,6 +64,8 @@ output:
   color: true
   metrics:
     average:
+      aggregation:
+        period: 100
       period: 10s
       persist: true
       table:
