Change test step data exchange mechanism (#43)
* Update changelog

* Update readme

* Update readme

* Add skeleton for removing histogram snapshots from metrics during the test run

* Add aggregation into single file
Add step console output

* Add snapshot aggregation throttling base on time window

* Add metrics aggregation into separate local files

Add quantile metrics check on the test start
Add console metrics output with N quantiles
Add back quantileValues to DistributedMetricsContext as it's then passed to TimingMetricQuantileResultsImpl

* Add MetricsTotalCsvLogMessage to output step results into csv file

Change HashMap to LinkedHashMap for quantile values to keep inputted order
Change log4g2 static metrics.total.csv header to a dynamic one to account for passed quantiles
Erase quantile data from MetricsCsvLogMessage as results during the test do not have any quantile data anymore

* Remove temporary comments

* Remove unused imports

* Remove debug logging

* Update readme

* Update changelog

* Make WAIT_PERIOD_MILLIS for snapshot supplier a constant

* Change debug messages for timing metrics file aggregator

* Change indents for quantiles of different length for step results console output

* Add parameter to configure metrics aggregation wait period

Fix output for timing metrics in recycle mode

* Add comments to explain where output methods are called

remove metrics output from doStop() for recycled ops since recycling doesn't affect timing metrics output

--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -64,6 +64,8 @@ output:
   color: true
   metrics:
     average:
+      aggregation:
+        period: 100
       period: 10s
       persist: true
       table:
@@ -85,7 +87,7 @@ run:
   node: false
   port: 9999
   scenario: null
-  version: 4.2.20
+  version: 4.3.0
 
 storage:
   auth:
