Add sequential keys for poc

--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -42,6 +42,8 @@ load:
         rate: false
       rate: 0
       recycle: 1000000
+    output:
+      duplicates: false
     recycle: false
     retry: false
     shuffle: false
