Add option to update contents for recycled items

--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -44,7 +44,10 @@ load:
       recycle: 1000000
     output:
       duplicates: false
-    recycle: false
+    recycle:
+      mode: false
+      content:
+        update: false
     retry: false
     shuffle: false
     type: create
