Increase precision for the test
so that the last metrics snapshot has exactly 1000 objects

--- a/src/test/robot/system/data/count_limit.yaml
+++ b/src/test/robot/system/data/count_limit.yaml
@@ -2,3 +2,8 @@ load:
     op:
         limit:
             count: 1000
+output:
+    metrics:
+        average:
+            aggregation:
+                period: 1
