change the default wait-finish value to false update log4j

--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -52,7 +52,7 @@ load:
     shuffle: false
     type: create
     wait:
-      finish: true
+      finish: false
   service:
     threads: 0
   step:
