--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,17 +28,17 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    - name: Execute Gradle build
+      run: ./gradlew clean jar
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
         # Artifact name
         name: artifact # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: /tmp/
+        path: /build/libs/mongoose-*.jar
         # The desired behavior if no files are found using the provided path.
       #Available Options:
       #warn: Output a warning but do not fail the action
