--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,7 @@ jobs:
         # Artifact name
         name: artifact # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: /build/libs/mongoose-*.jar
+        path: /build/libs/
         # The desired behavior if no files are found using the provided path.
       #Available Options:
       #warn: Output a warning but do not fail the action
