--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,19 +32,14 @@ jobs:
       uses: gradle/gradle-build-action@v2
     - name: Execute Gradle build
       run: ./gradlew clean jar
+    - name: Execute Gradle test
+      run: ./gradlew test
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
-        # Artifact name
-        name: artifact # optional, default is artifact
-        # A file, directory or wildcard pattern that describes what to upload
+        name: mongoose.jar
         path: ./build/libs/
-        # The desired behavior if no files are found using the provided path.
-      #Available Options:
-      #warn: Output a warning but do not fail the action
-      #error: Fail the action with an error message
-      #ignore: Do not output any warnings or errors, the action does not fail
-        if-no-files-found: warn # optional, default is warn
+        if-no-files-found: error
       # Duration after which artifact will expire in days. 0 means using default retention.
       # Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
         retention-days: 1 # optional
