--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -16,6 +9,15 @@ on:
 permissions:
   contents: read
 
+env:
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+  IMAGE_NAME: emcmongoose/mongoose-base
+  IMAGE_FILE_NAME: build/mongoose-base.tar
+  ROBOTEST_CONTAINER_WORKING_DIR: /root/mongoose
+  
+  
 jobs:
   build:
 
@@ -32,14 +34,34 @@ jobs:
       uses: gradle/gradle-build-action@v2
     - name: Execute Gradle build
       run: ./gradlew clean jar
-    - name: Execute Gradle test
-      run: ./gradlew test
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
         name: mongoose.jar
         path: ./build/libs/
         if-no-files-found: error
-      # Duration after which artifact will expire in days. 0 means using default retention.
-      # Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
         retention-days: 1 # optional
+    - name: Execute Gradle unit test
+      run: ./gradlew test    
+    - name: Execute Gradle integration test
+      run: ./gradlew integrationTest         
+    - name: Upload a failed test artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: testFailure.log
+        path: ./build/reports/tests/integrationTest/*
+        if-no-files-found: error
+        retention-days: 14 # optional
+        if: failure()
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file ci/docker/Dockerfile --tag my-image-name:${GITHUB_SHA}
+    - name: Upload a failed test artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: testFailure.log
+        path: ./build/reports/tests/integrationTest/*
+        if-no-files-found: error
+        retention-days: 14 # optional
+
+         
