Adding isComplete() to Operation interface; adjusting build.gradle for building in Eclipse

--- a/build.gradle
+++ b/build.gradle
@@ -156,6 +156,10 @@ sourceSets {
 	}
 }
 
+configurations {
+	implementation.extendsFrom provided
+}
+
 dependencies {
 
 	compileOnly("it.unimi.dsi:fastutil:${depVersion.fastutil}") {
