--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Setup Java 11
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '11'
