--- a/build.gradle
+++ b/build.gradle
@@ -172,7 +172,8 @@ dependencies {
 		"com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${depVersion.jackson}",
 		"com.github.akurilov:confuse:${depVersion.confuse}",
 		"com.github.akurilov:confuse-io-yaml:${depVersion.confuseIoYaml}",
-		"com.github.akurilov:fiber4j:${depVersion.fiber4j}",
+		//"com.github.akurilov:fiber4j:${depVersion.fiber4j}",
+		"com.github.dlarge:fiber4j:master-SNAPSHOT",
 		//"com.github.akurilov:java-commons:${depVersion.javaCommons}",
 		"com.github.dlarge:java-commons:master-SNAPSHOT",
 		"com.lmax:disruptor:${depVersion.disruptor}",
