Adding CLI option to disable timing metrics

--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,11 @@ ext {
 		commonsLang        : "2.6",
 		disruptor          : "3.4.2",
 		fastutil           : "8.2.2",
-		fiber4j            : "1.1.0",
+		//fiber4j            : "1.1.0",
+		fiber4j            : "59d6ec1215",
 		jackson            : "2.9.8",
 		//javaCommons        : "2.3.6",
+		javaCommons        : "f48e91c8ba",
 		jetty              : "9.4.14.v20181114",
 		junit              : "4.12",
 		scala              : "2.12.6",
@@ -174,9 +176,9 @@ dependencies {
 		"com.github.akurilov:confuse:${depVersion.confuse}",
 		"com.github.akurilov:confuse-io-yaml:${depVersion.confuseIoYaml}",
 		//"com.github.akurilov:fiber4j:${depVersion.fiber4j}",
-		"com.github.dlarge:fiber4j:master-SNAPSHOT",
+		"com.github.dlarge:fiber4j:${depVersion.fiber4j}",
 		//"com.github.akurilov:java-commons:${depVersion.javaCommons}",
-		"com.github.dlarge:java-commons:master-SNAPSHOT",
+		"com.github.dlarge:java-commons:${depVersion.javaCommons}",
 		"com.lmax:disruptor:${depVersion.disruptor}",
 		"io.prometheus:simpleclient:${depVersion.prometheus}",
 		"io.prometheus:simpleclient_servlet:${depVersion.prometheus}",
