--- a/src/main/resources/config/defaults.yaml
+++ b/src/main/resources/config/defaults.yaml
@@ -82,6 +82,8 @@ output:
     trace:
       persist: false
     threshold: 0
+    timing:
+      persist: true
     quantiles:
     - 0.25
     - 0.5
